[package]
name = "restore-rand"
version = "0.1.0"
authors = ["Richard Dallaway <richard@dallaway.com>"]
edition = "2018"


[dependencies]
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
rand_pcg = { version = "0.3", features=["serde1"] }
rustc-hash = "1.1"
structopt = "0.3"
git-version = "0.3"
tempfile = "3.1"